<resources>
    <string name="app_name">ReX</string>

    <string name="main_image_desc">Dog profile picture or ReX logo</string>

    <string name="search_string">Search</string>
    <string name="search_hint">Type search text</string>

    <string name="home_menu_item">Search</string>
    <string name="profile_menu_item">Update Profile</string>

    <string name="profile_name">Profile</string>
    <string name="profile_update_name">Profile Update</string>
    <string name="results_name">Results</string>

    <string name="results_placeholder">Results Test</string>

   //For dog profile
    <string name="name_hint">Enter dogs name</string>
    <string name="breed_hint">Enter your dogs breed</string>
    <string name="weight_hint">Enter your dogs weight</string>
    <string name="picture_text">Pic a picture</string>



    
    //all the symptoms for the FOOD_TABLE
    <string name="symptom10">Symptoms- vomiting and diarrhea, panting,
        excessive thirst and urination, hyperactivity, abnormal heart rhythm,
        tremors, seizures and even death</string>
    <string name="symptom9">Symptoms- vomiting, diarrhea, decreased coordination,
        central nervous system depression difficulty breathing, tremors,
        abnormal blood acidity, coma and even death </string>
    <string name="symptom8">Symptoms- brick red mucous membranes, dilated pupils,
        difficulty breathing, panting, shock</string>
    <string name="symptom7">Symptoms- Vomiting and diarrhea,
        possible obstruction in throat</string>
    <string name="symptom6">Symptoms- Contact dermatitis, vomiting, diarrhea,
        anorexia, allergic reactions</string>
    <string name="symptom5">Symptoms- can cause the stomach to bloat, and potentially twist</string>
    <string name="symptom4">Symptoms- gastrointestinal and dermal irritation</string>
    <string name="symptom3">Symptoms- stomach upset, loose stools or diarrhea</string>
    <string name="symptom2">Symptoms- minor stomach upset</string>
    <string name="symptom1">Symptoms- not toxic to dogs</string>
    <string name="symptom_onion_family">Symptoms- vomiting, breakdown of red blood cells
        (hemolytic anemia, Heinz body anemia), blood in urine,
        weakness, high heart rate, panting</string>
    <string name="symptom_grape">Symptoms- potential kidney failure</string>
    <string name="symptom_marijuana">Symptoms- prolonged depression,
        vomiting, in-coordination, sleepiness or excitation,
        hypersalivation, dilated pupils, low blood pressure,
        low body temperature, seizure, coma, death (rare)</string>

    <array name="sampleAllergies">
        <item>allergy1</item>
        <item>allergy2</item>
    </array>

</resources>
